Attempt to fix text wrap on windows.

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -52,8 +52,8 @@ $wave-color: #8D99AE;
     bottom: 60px;
     left: 80px;
     margin: 0;
-    font-size: 4.2vw;
-    line-height: 5.8vw;
+    font-size: 4.0vw;
+    line-height: 5.6vw;
     color: $color-white;
     opacity: 1;
     @include transition(all 500ms ease);
